force-app/main/default/objects/Report_Request_Item__c/Report_Request_Item__c.object-meta.xml
<CustomObject>
    <description>记录一次报告申请中被选中的人员、所用 consent、交付状态与取报次数</description>
    <label>Report Request Item</label>
    <nameField>
        <displayFormat>RRI-{00000}</displayFormat>
        <label>明细名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>