force-app/main/default/objects/Report_Request_Item__c/fields/AS400_Status__c.field-meta.xml
<CustomField>
    <fullName>AS400_Status__c</fullName>
    <label>AS400 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>AS400 Processing</fullName>
                <isActive>false</isActive>
                <label>AS400 Processing</label>
            </value>
            <value>
                <fullName>Packaged</fullName>
                <isActive>false</isActive>
                <label>Packaged</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <isActive>false</isActive>
                <label>Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>