force-app/main/default/objects/Report_Request_Item__c/fields/Authorized_List_Exported__c.field-meta.xml
<CustomField>
    <fullName>Authorized_List_Exported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized List Exported</label>
    <type>Checkbox</type>
</CustomField>