force-app/main/default/objects/Report_Request_Item__c/fields/Authorized_List_Exported_At__c.field-meta.xml
<CustomField>
    <fullName>Authorized_List_Exported_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized List Exported At</label>
    <type>DateTime</type>
</CustomField>