force-app/main/default/objects/Report_Request_Item__c/fields/Authorized_List_Exported_By__c.field-meta.xml
<CustomField>
    <fullName>Authorized_List_Exported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized List Exported By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Authorized Export Records</relationshipLabel>
    <relationshipName>Authorized_Export_Records</relationshipName>
    <type>Lookup</type>
</CustomField>