force-app/main/default/objects/Report_Request_Item__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Report Request Items</relationshipLabel>
    <relationshipName>Report_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>