force-app/main/default/objects/Report_Request_Item__c/fields/Completion_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completion Notification Sent</label>
    <type>Checkbox</type>
</CustomField>