force-app/main/default/objects/Report_Request_Item__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>使用的Consent</label>
    <referenceTo>Consent__c</referenceTo>
    <relationshipName>Report_Request_Items_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>