force-app/main/default/objects/Report_Request_Item__c/fields/Consent_Revalidation_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Revalidation_Status__c</fullName>
    <label>Consent Revalidation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>