force-app/main/default/objects/Report_Request_Item__c/fields/Data_Subject__c.field-meta.xml
<CustomField>
    <fullName>Data_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Subject</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Report_Request_Items_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>