force-app/main/default/objects/Report_Request_Item__c/fields/Delivery_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>交付确认</label>
    <type>Checkbox</type>
</CustomField>