force-app/main/default/objects/Report_Request_Item__c/fields/Expiry_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否触发过期</label>
    <type>Checkbox</type>
</CustomField>