force-app/main/default/objects/Report_Request_Item__c/fields/Notice_Sent_To_Data_Subject__c.field-meta.xml
<CustomField>
    <fullName>Notice_Sent_To_Data_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>已通知员工</label>
    <type>Checkbox</type>
</CustomField>