force-app/main/default/objects/Report_Request_Item__c/fields/Report_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Report_Generated_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>报告生成时间</label>
    <type>DateTime</type>
</CustomField>