force-app/main/default/objects/Report_Request_Item__c/fields/Report_Request_Case__c.field-meta.xml
<CustomField>
    <fullName>Report_Request_Case__c</fullName>
    <label>Report Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Report_Request_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>