force-app/main/default/objects/Report_Request_Item__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consent</fullName>
                <default>true</default>
                <label>Consent Request</label>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>