force-app/main/default/objects/Report_Request_Item__c/fields/Selected_At__c.field-meta.xml
<CustomField>
    <fullName>Selected_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>选中时间</label>
    <type>DateTime</type>
</CustomField>