force-app/main/default/objects/Report_Request_Item__c/fields/Selected_By__c.field-meta.xml
<CustomField>
    <fullName>Selected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>选中人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Report_Request_Items_User</relationshipName>
    <type>Lookup</type>
</CustomField>