force-app/main/default/objects/Report_Request_Item__c/fields/SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA Due Date</label>
    <type>DateTime</type>
</CustomField>