force-app/main/default/objects/Report_Request_Item__c/fields/SLA_Warning_Sent__c.field-meta.xml
<CustomField>
    <fullName>SLA_Warning_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Warning Sent</label>
    <type>Checkbox</type>
</CustomField>