force-app/main/default/objects/Report_Request_Item__c/fields/Successful_Retrieval_Count__c.field-meta.xml
<CustomField>
    <fullName>Successful_Retrieval_Count__c</fullName>
    <label>成功取报次数</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>